--- a/src/input.css
+++ b/src/input.css
@@ -6,17 +6,30 @@ body {
   font-family: 'inter', sans-serif;
 }
 
+.navbar-fixed {
+  @apply fixed z-[9999] bg-white bg-opacity-40;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
 .hamburger-line {
   display: block;
   width: 30px;
   height: 2px;
-  background-color: #e1e2e5;
+  background-color: #0b0b0e;
   margin-top: 8px;
   margin-bottom: 8px;
 }
 
+.home {
+  font-family: 'Whisper', cursive;
+  font-size: 45px;
+  font-weight: bolder;
+}
+
 .hamburger-active > span:nth-child(1) {
-  @apply origin-top-left rotate-45;
+  @apply rotate-45;
 }
 
 .hamburger-active > span:nth-child(2) {
@@ -24,5 +37,5 @@ body {
 }
 
 .hamburger-active > span:nth-child(3) {
-  @apply origin-bottom-left -rotate-45;
+  @apply -rotate-45;
 }
